redmine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: redmine-app
  template:
    metadata:
      labels:
        app: redmine-app
    spec:
      containers:
      - image: redmine:6.0.4
        name: redmine
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 250m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: redmine-persistent-storage
          mountPath: /usr/src/redmine/files
      volumes:
      - name: redmine-persistent-storage
        persistentVolumeClaim:
          claimName: redmine-pvc
