redmine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
spec:
  selector:
    app: redmine-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
